--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "classnames": "^2.3.1"
+  },
   "author": "",
   "license": "ISC"
 }
